--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@oasisdigital/angular-material-search-select": "^0.14.0",
         "angular2-uuid": "^1.1.1",
         "angular4-multiselect-dropdown": "^2.0.0",
+        "chart.js": "^2.9.4",
         "core-js": "^2.5.7",
         "echarts": "^4.2.0-rc.1",
         "font-awesome": "^4.7.0",
@@ -49,6 +50,7 @@
         "moment": "^2.22.2",
         "ng-multiselect-dropdown": "^0.2.10",
         "ng-multiselect-dropdown-angular7": "^0.1.5",
+        "ng2-charts": "^2.2.3",
         "ng2-pdf-viewer": "^6.3.2",
         "ngx-filter-pipe": "^2.1.2",
         "ngx-loading": "^3.0.1",
