ultima version funcional

--- a/Matrizapp/package.json
+++ b/Matrizapp/package.json
@@ -15,6 +15,7 @@
     "hmr": "ng serve --hmr -e=hmr",
     "build": "ng build",
     "test": "ng test",
+    "build-compress": "ng build && gzipper c ./dist --include js,css,html --output-file-format [filename].[ext] ./dist-compressed/",
     "e2e": "ng e2e"
   },
   "dependencies": {
